force-app/main/default/objects/Subcategory__x/Subcategory__x.object-meta.xml
<CustomObject>
    <description>Subcategorys</description>
    <externalDataSource>Random_Test_Source</externalDataSource>
    <externalName>Subcategorys</externalName>
    <label>Subcategory</label>
    <pluralLabel>Subcategorys</pluralLabel>
</CustomObject>