force-app/main/default/objects/Subcategory__x/fields/categoryID__c.field-meta.xml
<CustomField>
    <fullName>categoryID__c</fullName>
    <description>categoryID</description>
    <externalDeveloperName>categoryID</externalDeveloperName>
    <label>CategoryID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>