force-app/main/default/objects/Subcategory__x/fields/subcategoryIndex__c.field-meta.xml
<CustomField>
    <fullName>subcategoryIndex__c</fullName>
    <description>subcategoryIndex</description>
    <externalDeveloperName>subcategoryIndex</externalDeveloperName>
    <label>SubcategoryIndex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>