force-app/main/default/objects/Subcategory__x/fields/subcategoryName__c.field-meta.xml
<CustomField>
    <fullName>subcategoryName__c</fullName>
    <description>subcategoryName</description>
    <externalDeveloperName>subcategoryName</externalDeveloperName>
    <label>SubcategoryName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>